Closed
Bug 1274886
Opened 6 years ago
Closed 6 years ago
Abort in IPCError-content | (msgtype=0x800017,name=???) Route error: message sent to unknown actor ID
Categories
(Core :: Networking, defect)
Tracking
()
RESOLVED
FIXED
mozilla50
People
(Reporter: n.nethercote, Assigned: valentin)
References
Details
(Keywords: crash, Whiteboard: [necko-active])
Crash Data
Attachments
(1 file)
3.78 KB,
patch
|
jduell.mcbugs
:
review+
Sylvestre
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is report bp-503cfc76-7a5d-4d6f-acf4-344ba2160521. ============================================================= We have 16 of these, going back to March: https://crash-stats.mozilla.com/signature/?product=Firefox&date=%3E%3D2016-01-20&signature=IPCError-content+%7C+(msgtype%3D0x800017%2Cname%3D%3F%3F%3F)+Route+error%3A+message+sent+to+unknown+actor+ID&_columns=date&_columns=product&_columns=version&_columns=build_id&_columns=platform&_columns=reason&_columns=address&page=1 billm, any ideas?
Flags: needinfo?(wmccloskey)
Updated•6 years ago
|
tracking-e10s:
--- → ?
Well, the message seems to be PHttpChannel::Redirect1Begin. It seems like this message is being sent by the parent. By the time it's received in the child, the HTTP channel actor has been destroyed. This could happen because the child side already did Send__delete__. Or the channel could be getting destroyed because the process is shutting down. I don't see any evidence that this is happening during shutdown, though. I'll send this to Necko.
Component: IPC → Networking
Flags: needinfo?(wmccloskey)
Assignee | ||
Comment 2•6 years ago
|
||
(In reply to Bill McCloskey (:billm) from comment #1) > Well, the message seems to be PHttpChannel::Redirect1Begin. It seems like > this message is being sent by the parent. By the time it's received in the > child, the HTTP channel actor has been destroyed. This could happen because > the child side already did Send__delete__. Or the channel could be getting > destroyed because the process is shutting down. I don't see any evidence > that this is happening during shutdown, though. > > I'll send this to Necko. So, right now HttpChannelParent calls SendDeleteSelf() [step 1], which the child receives, and processes then calls Send__delete__(this) [step 2], which will trigger HttpChannelParent::ActorDestroy() being called - which sets mIPCClosed = true [step 3]. Should the parent avoid to sending messages after [step 1]?
Flags: needinfo?(wmccloskey)
Correct, the parent needs to avoid sending any messages after SendDeleteSelf.
Flags: needinfo?(wmccloskey)
![]() |
||
Comment 4•6 years ago
|
||
Valentin, the e10s team felt this could cause problems down the road if popular sites manage to trigger it. Hence we're thinking it should block e10s rollout. It also sounds like it should be pretty easy to fix. Does the necko team concur and if so, can you all pick this up and get it fixed and uplifted to 48?
Flags: needinfo?(valentin.gosu)
Assignee | ||
Comment 5•6 years ago
|
||
Definitely. I'll upload a patch and nominate 48 after review. Thanks.
Assignee: nobody → valentin.gosu
Flags: needinfo?(valentin.gosu)
Whiteboard: [necko-active]
Assignee | ||
Comment 6•6 years ago
|
||
MozReview-Commit-ID: 4EE91hvErM7
Attachment #8761691 -
Flags: review?(jduell.mcbugs)
Assignee | ||
Comment 7•6 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=caaae904a452
![]() |
||
Updated•6 years ago
|
Comment 8•6 years ago
|
||
Comment on attachment 8761691 [details] [diff] [review] Don't send any more IPC messages after calling PHttpChannelParent::SendDeleteSelf() Review of attachment 8761691 [details] [diff] [review]: ----------------------------------------------------------------- Nominating for uplift. Simple patch that prevents an e10s-only crash.
Attachment #8761691 -
Flags: review?(jduell.mcbugs)
Attachment #8761691 -
Flags: review+
Attachment #8761691 -
Flags: approval-mozilla-beta?
Attachment #8761691 -
Flags: approval-mozilla-aurora?
Assignee | ||
Comment 9•6 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/c109d0b45e8aa440b588c1a862b0ca5b83ee050e Bug 1274886 - Don't send any more IPC messages after calling PHttpChannelParent::SendDeleteSelf() r=jduell
Comment 10•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/c109d0b45e8a
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox50:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
Updated•6 years ago
|
status-firefox48:
--- → affected
Comment 11•6 years ago
|
||
Jason, could you fill the uplift form? I cannot evaluate the impact without it. Thanks
Flags: needinfo?(jduell.mcbugs)
Comment 12•6 years ago
|
||
Comment on attachment 8761691 [details] [diff] [review] Don't send any more IPC messages after calling PHttpChannelParent::SendDeleteSelf() Approval Request Comment [Feature/regressing bug #]: old [User impact if declined]: e10s crashes [Describe test coverage new/current, TreeHerder]: lots of existing tests [Risks and why]: extremely low [String/UUID change made/needed]: none
Flags: needinfo?(jduell.mcbugs)
Comment 13•6 years ago
|
||
Comment on attachment 8761691 [details] [diff] [review] Don't send any more IPC messages after calling PHttpChannelParent::SendDeleteSelf() Fix a crash, taking it Should be in 48 beta 3
Attachment #8761691 -
Flags: approval-mozilla-beta?
Attachment #8761691 -
Flags: approval-mozilla-beta+
Attachment #8761691 -
Flags: approval-mozilla-aurora?
Attachment #8761691 -
Flags: approval-mozilla-aurora+
Comment 14•6 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-aurora/rev/e627ab32ecfb
Comment 15•6 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-beta/rev/dc94a369bf09
You need to log in
before you can comment on or make changes to this bug.
Description
•