Bug 1274886 - Don't send any more IPC messages after calling PHttpChannelParent::SendDeleteSelf() r=jduell, a=sylvestre

MozReview-Commit-ID: 4EE91hvErM7

--HG--
extra : source : c109d0b45e8aa440b588c1a862b0ca5b83ee050e